grammar.js
    module: ($) => repeat($._statement),

    _statement: ($) => choice($._simple_statements, $._compound_statement),

    // Simple statements

    expression_statement: ($) =>
      choice(
        $.expression,
        $.tuple_expression,
        $.assignment,
        $.augmented_assignment,
        $.yield,
      ),

    pass_statement: (_) => prec.left("pass"),
    function_definition: ($) => seq(
      optional('async'),
      choice('def', 'fn'),
      optional(seq('[',
        field('name', $.identifier),
        field('type_parameters', optional($.type_parameter)),
        field('parameters', $.parameters),
        ']')),
      field('name', $.identifier),
      field('type_parameters', optional($.type_parameter)),
      field('parameters', $.parameters),
      optional($.unified_clause),
      optional($._function_effects),
      optional($.result_convention),
      optional(
        seq(
          '->',
          optional($._ref_convention),
          field('return_type', $.type),
        ),
      ),
      repeat($.where_clause),
      ':',
      field('body', $._suite),
    ),

    // A brace-delimited capture/result convention preceding the return type,
    // e.g. `def f(...) {read} -> T:`. Each convention may bind a name, as in
    // `def f() {read x, mut y}:`.
    _function_effects: ($) => repeat1(choice(
      // A typed `raises` carries an optional error type. The error type is an
      // expression-level type (parametric `Errors[X]`, unioned `A | B`, dotted
      // `mod.Err`) but never a bare `constrained_type`, whose `:` would
      // otherwise swallow the function body colon in `def f() raises HALError:`.
      seq('raises', optional(field('raises_type', alias($._raises_type, $.type)))),
      // `capturing`/`escaping` may carry an origin list, e.g. `capturing[_]`.
      seq(choice('capturing', 'escaping'), optional($.capture_list)),
      'thin',
    )),

    parameters: ($) => seq(
      '(',
      optional($._parameters),
      ')',
    ),

    class_definition: ($) => seq(
      choice('class', 'struct'),
      field('name', $.identifier),
      field('type_parameters', optional($.type_parameter)),
      field(
        'superclasses',
        optional(alias($.superclass_list, $.argument_list)),
      ),
      ':',
      field('body', $._suite),
    ),

    // A struct conformance list, like an argument list except each entry may
    // carry `where` constraints, e.g. `Copyable where conforms_to(T, Copyable)`.
    _suite: ($) =>
      choice(
        alias($._simple_statements, $.block),
        seq($._indent, $.block),
        alias($._newline, $.block),
      ),

    block: ($) => seq(repeat($._statement), $._dedent),

    _parameters: ($) => seq(commaSep1($.parameter), optional(",")),

    _ref_convention: ($) => prec(1, seq("ref", "[", $.expression, "]")),
    string: ($) =>
      seq(
        $.string_start,
        repeat(choice($.interpolation, $.string_content)),
        $.string_end,
      ),

    string_content: ($) =>
      prec.right(
        repeat1(
          choice(
            $.escape_interpolation,
            $.escape_sequence,
            $._not_escape_sequence,
            $._string_content,
          ),
        ),
      ),

    _not_escape_sequence: (_) => token.immediate("\\"),

    integer: (_) =>
      token(
        choice(
          seq(choice("0x", "0X"), repeat1(/_?[A-Fa-f0-9]+/), optional(/[Ll]/)),
          seq(choice("0o", "0O"), repeat1(/_?[0-7]+/), optional(/[Ll]/)),
          seq(choice("0b", "0B"), repeat1(/_?[0-1]+/), optional(/[Ll]/)),
          seq(
            repeat1(/[0-9]+_?/),
            choice(
              optional(/[Ll]/), // long numbers
              optional(/[jJ]/), // complex numbers
            ),
          ),
        ),
      ),

    identifier: (_) => /[_\p{XID_Start}][_\p{XID_Continue}]*/,

    comment: (_) => token(seq("#", /.*/)),
