test/corpus/errors.txt
====================================
An error before a string literal
:error
====================================

def a(b):
    c.

    """
    d
    """

    e

---

(module
  (function_definition
    (identifier)
    (parameters
      (identifier))
    (ERROR
      (identifier))
    (block
      (expression_statement
        (string
          (string_start)
          (string_content)
          (string_end)))
      (expression_statement
        (identifier)))))

=================================================
Error detected at globally reserved keyword
=================================================

def test_comprehension():
    [x for    # Should error here, and not swallow the next def

    def valid_func():    # Should parse as valid function
        pass

def test_incomplete_call():
    foo(    # Should error here
    class Example:    # Should still parse as valid class definition
        pass

---

(module
  (function_definition
    (identifier)
    (parameters)
    (ERROR
      (identifier))
    (comment)
    (block
      (function_definition
        (identifier)
        (parameters)
        (comment)
        (block
          (pass_statement)))))
  (function_definition
    (identifier)
    (parameters)
    (ERROR
      (identifier))
    (comment)
    (block
      (class_definition
        (identifier)
        (comment)
        (block
          (pass_statement))))))
================================================================================
Python statements are rejected
:error
================================================================================

del x
global x
nonlocal x

--------------------------------------------------------------------------------

(module [0, 0] - [3, 0]
  (ERROR [0, 0] - [2, 8]
    (identifier [0, 4] - [0, 5])
    (identifier [1, 7] - [1, 8]))
  (identifier [2, 9] - [2, 10]))

================================================================================
match is a reserved word
:error
================================================================================

var match = 2
x = match

--------------------------------------------------------------------------------

(module [0, 0] - [2, 0]
  (ERROR [0, 0] - [1, 9]
    (ERROR [0, 4] - [0, 13]
      (integer [0, 12] - [0, 13]))
    (identifier [1, 0] - [1, 1])))
